absolute on mobile, fixed on desktop

--- a/app/assets/stylesheets/common/base/modal.scss
+++ b/app/assets/stylesheets/common/base/modal.scss
@@ -180,7 +180,7 @@
   }
 
   .modal-body {
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 400px;
     padding: 1em;
 
